--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@ngrok/ngrok-api": "^0.13.0",
+		"axios": "^1.7.7",
+		"ngrok": "^5.0.0-beta.2"
 	}
 }
